--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 <div class="container">
         <div class="text-item">
-            This is the first piece of text within the column.
+            <h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
         </div>
         <div class="text-item">
-            This is the second piece of text within the column.
+            <h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
         </div>
     </div>
 </body>
