--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
+</style>
+</head>
+<body>
 <div class="container">
         <div class="text-item">
             <h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
