--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <img width="1300" src="behaviour.img" alt="">
 <H2 style="color: sandybrown;">>What Our Behaviour Therapists practicing here</H2>
 <p style="color: rgb(53, 50, 50);">CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
+<table>
+    <tr>
 <h3 style="color: gray;">>Anxiety Or Panic Attacks</h3>
 <h3 style="color: gray;">>Depression</h3>
 <h3 style="color: gray;">>Eating Disorders</h3>
@@ -110,6 +112,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Schizophrenia</h3>
 <h3 style="color: gray;">>Post-Traumatic Stress Disorder</h3>
 <h3 style="color: gray;">>Fibromyalgia</h3>
+    </tr>
+    <tr>
 <h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
 <h3 style="color: gray;">>Insomnia</h3>
 <h3 style="color: gray;">>Relationship problems or divorce</h3>
@@ -118,6 +122,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3>
 <h3 style="color: gray;">>Time management and procrastination</h3>
 <h3 style="color: gray;">>Low self-esteem.</h3>
+    </tr>
+</table>
 <center><h2 style="color: rgb(83, 1, 83);">Meet  Our Experts</h2></center>
 <center><h4 style="color: rgb(83, 1, 83);">Care you,at every step of the way</h4></center>
 <center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
@@ -139,16 +145,5 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
-</style>
-</head>
-<body>
-<div class="container">
-        <div class="text-item">
-            <h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
-        </div>
-        <div class="text-item">
-            <h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
-        </div>
-    </div>
 </body>
 </html>
