--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <p style="color: rgb(53, 50, 50);">CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
 <table>
     <tr>
-<h3 style="color: gray;">>Anxiety Or Panic Attacks</h3>
-<h3 style="color: gray;">>Depression</h3>
-<h3 style="color: gray;">>Eating Disorders</h3>
+<th><h3 style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
+<th><h3 style="color: gray;">>Depression</h3></th>
+<th><h3 style="color: gray;">>Eating Disorders</h3></th>
+    </tr>
 <h3 style="color: gray;">>Obsessive-Compulsive Disorders</h3>
 <h3 style="color: gray;">>Substance Use Disorders</h3>
 <h3 style="color: gray;">>Bipolar Disorder</h3>
@@ -112,7 +113,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Schizophrenia</h3>
 <h3 style="color: gray;">>Post-Traumatic Stress Disorder</h3>
 <h3 style="color: gray;">>Fibromyalgia</h3>
-    </tr>
+    
     <tr>
 <h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
 <h3 style="color: gray;">>Insomnia</h3>
