--- a/index.html
+++ b/index.html
@@ -99,30 +99,29 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <img width="1300" src="behaviour.img" alt="">
 <H2 style="color: sandybrown;">>What Our Behaviour Therapists practicing here</H2>
 <p style="color: rgb(53, 50, 50);">CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
-<table>
+<table width="60%" align="left">
     <tr>
 <th><h3 style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
 <th><h3 style="color: gray;">>Depression</h3></th>
 <th><h3 style="color: gray;">>Eating Disorders</h3></th>
     </tr>
-<h3 style="color: gray;">>Obsessive-Compulsive Disorders</h3>
-<h3 style="color: gray;">>Substance Use Disorders</h3>
-<h3 style="color: gray;">>Bipolar Disorder</h3>
-<h3 style="color: gray;">>Phobias</h3>
-<h3 style="color: gray;">>Personality disorders</h3>
-<h3 style="color: gray;">>Schizophrenia</h3>
-<h3 style="color: gray;">>Post-Traumatic Stress Disorder</h3>
-<h3 style="color: gray;">>Fibromyalgia</h3>
-    
     <tr>
-<h3 style="color: gray;">>Irritable Bowl Syndrome</h3>
-<h3 style="color: gray;">>Insomnia</h3>
-<h3 style="color: gray;">>Relationship problems or divorce</h3>
-<h3 style="color: gray;">>Stress or anger management</h3>
-<h3 style="color: gray;">>Abandonment or trust issues</h3>
-<h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3>
-<h3 style="color: gray;">>Time management and procrastination</h3>
-<h3 style="color: gray;">>Low self-esteem.</h3>
+<td><h3 style="color: gray;">>Obsessive-Compulsive Disorders</h3></td>
+<td><h3 style="color: gray;">>Substance Use Disorders</h3></td>
+<td><h3 style="color: gray;">>Bipolar Disorder</h3></td>
+<td><h3 style="color: gray;">>Phobias</h3></td>
+<td><h3 style="color: gray;">>Personality disorders</h3></td>
+<td><h3 style="color: gray;">>Schizophrenia</h3></td>
+<td><h3 style="color: gray;">>Post-Traumatic Stress Disorder</h3></td>
+<td><h3 style="color: gray;">>Fibromyalgia</h3></td>
+<td><h3 style="color: gray;">>Irritable Bowl Syndrome</h3></td>
+<td><h3 style="color: gray;">>Insomnia</h3></td>
+<td><h3 style="color: gray;">>Relationship problems or divorce</h3></td>
+<td><h3 style="color: gray;">>Stress or anger management</h3></td>
+<td><h3 style="color: gray;">>Abandonment or trust issues</h3></td>
+<td><h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3></td>
+<td><h3 style="color: gray;">>Time management and procrastination</h3></td>
+<td><h3 style="color: gray;">>Low self-esteem.</h3></td>
     </tr>
 </table>
 <center><h2 style="color: rgb(83, 1, 83);">Meet  Our Experts</h2></center>
