--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <p style="color: rgb(53, 50, 50);">CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
 <table width="100%" align="left">
     <tr>
-<th><h3 text-align="left" style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
+<th><h3 text-align: left;style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
 <th><h3 style="color: gray;">>Depression</h3></th>
 <th><h3 style="color: gray;">>Eating Disorders</h3></th>
     </tr>
