--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <table width="100%" align="left">
     <tr>
 <th><h3 style="text-align: left;" color: gray;>>Anxiety Or Panic Attacks</h3></th>
-<th><h3 style="color: gray;" style="text-align: left;">>Depression</h3></th>
+<th><h3 style="text-align: left;"style="color: gray;">>Depression</h3></th>
 <th><h3 style="color: gray;">>Eating Disorders</h3></th>
     </tr>
     <tr>
