--- a/index.html
+++ b/index.html
@@ -130,9 +130,6 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <td><h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3></td>
 <td><h3 style="color: gray;">>Time management and procrastination</h3></td> 
     </tr>
-    <tr>
-<td><h3 style="color: gray;">>Low self-esteem.</h3></td>
-    </tr>
 </table>
 <center><h2 style="color: rgb(83, 1, 83);">Meet  Our Experts</h2></center>
 <center><h4 style="color: rgb(83, 1, 83);">Care you,at every step of the way</h4></center>
@@ -155,5 +152,6 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 <center><H2 style="color: brown;">--------------------------------------------------------------------------------------------------------------</H2></center>
+<h3 style="color: gray;">>Low self-esteem.</h3>
 </body>
 </html>
