--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <table width="100%" align="left">
     <tr>
 <th><h3 style="text-align: left; color: gray;">>Anxiety Or Panic Attacks</h3></th>
-<th><h3 class="left-align" style="color: gray;">>Depression</h3></th>
-<th><h3 class="left-align" style="color: gray;">>Eating Disorders</h3></th>
+<th><h3 style="text-align: left; color: gray;">>Depression</h3></th>
+<th><h3 style="text-align: left; color: gray;">>Eating Disorders</h3></th>
     </tr>
     <tr>
 <td><h3 class="left-align" style="color: gray;">>Obsessive-Compulsive Disorders</h3></td>
