--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
     </tr>
     <tr>
 <td><h3 style="color: gray;">>Abandonment or trust issues</h3></td>
-<td><h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3></td>
+<td><h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job)</h3></td>
 <td><h3 style="color: gray;">>Time management and procrastination</h3></td> 
     </tr>
 </table>
