--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>heaven of heal</title>
 </head>
-<body>
+<body background-color: lightblue;></body>
 <img height="300px" width="1300px" src="hoh.name.jpg" alt="">
 <img height="250px" width="250px" src="hoh.logo.png" align="right" alt="">
 <H2 style="color: brown;">Dr.Sujitha P MPT,MIAP,NDT,SI.,(Reg No. - L59656)</H2>
