modified:   index.html

--- a/index.html
+++ b/index.html
@@ -121,15 +121,16 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><h2 style="color: rgb(83, 1, 83);">Meet  Our Experts</h2></center>
 <center><h4 style="color: rgb(83, 1, 83);">Care you,at every step of the way</h4></center>
 <center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
-<center><h3 style="color: peru;">Senior consultant</h3></center>
+<center><h3 style="color: peru;">Senior consultant | physiotherapist</h3></center>
 <CEnter><H3 style="color: peru;">Pediatric & Neuro</H3></CEnter>
 <center><h3 style="color: peru;">8+years Experience</h3></center>
 <center><h2 style="color: blueviolet;">>Mr.Thirugnana Sammantham BPT</h2></center>
 <CEnter><H3 style="color: peru;">Concultant physiotherapist</H3></CEnter>
 <center><h3 style="color: peru;">3+years Experience</h3></center>
 <center><h2 style="color: blueviolet;">>Miss.Bharathi BOT</h2></center>
-<CEnter><h3 style="color: peru;">Senior Consultant</h3></CEnter>
-<center><h3 style="color: peru;">Occupational Therapist</h3></center>
+<CEnter><h3 style="color: peru;">Senior Consultant | Occupational Therapist</h3></CEnter>
+<center><h3 style="color: peru;">(Specialized in Autism, ADHD, LD, CP, Down syndrome,</h3></center>
+<center><h3 style="color: peru;">Brain Gym, Double Doodle, Sensory Integration & Play Therapy)</h3></center>
 <center><h3 style="color: peru;">8+Years Experience</h3></center>
 <CEnter><H2 style="color: blueviolet;">>Mr.Raja R BOT, ABA.,</H2></CEnter>
 <CEnter><H3 style="color: peru;">Consultant Occupational Therapist</H3></CEnter>
