modified:   index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><h4 style="color: rgb(83, 1, 83);">Care you,at every step of the way</h4></center>
 <center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
 <center><h3 style="color: peru;">Senior consultant | physiotherapist</h3></center>
-<CEnter><H3 style="color: peru;">Pediatric & Neuro</H3></CEnter>
+<CEnter><H3 style="color: peru;">(Specialized in Pediatric & Neuro)</H3></CEnter>
 <center><h3 style="color: peru;">8+years Experience</h3></center>
 <center><h2 style="color: blueviolet;">>Mr.Thirugnana Sammantham BPT</h2></center>
 <CEnter><H3 style="color: peru;">Concultant physiotherapist</H3></CEnter>
