renamed:    clear logo without background.png -> clearlogo.png 	modified:   index.html 	renamed:    clear logo.png -> logo.png

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body background-color: lightblue;></body>
 <img height="300px" width="1300px" src="hoh.name.jpg" alt="">
-<img height="250px" width="250px" src="hohnew2.png.png" align="right" alt="">
+<img height="250px" width="250px" src="clearlogo.png" align="right" alt="">
 <H2 style="color: brown;">Dr.Sujitha P MPT,MIAP,NDT,SI.,</H2>
 <h3 style="color: brown;">(Specalized in Neuro & Pediatric)</h3>
 <H3 style="color: brown;">Founder-Heaven of Heal</H3>
